# aidm-world-studio

./: .gitignore  CHANGELOG.md  IDEAS.md  README.md  pyproject.toml
docs/: product-map.md
scripts/: dump_help_to_folio.py
src/world_studio/: __init__.py  argflags.py  book.py  book_ui.py  cli.py  commands.py  db.py  format.py  help_cli.py  help_topics.py  ids.py  measure.py  multiline_open.py  schema.sql  seed.py  status.py  story_when.py  studio_text.py  text_editor.py  ven_pack.py  wiki.py  world.py
tests/: test_argflags.py  test_book.py  test_clear_log.py  test_containers.py  test_creator_shorthand.py  test_desc.py  test_desc_live_undo.py  test_despawn.py  test_display.py  test_help_cli.py  test_help_ui.py  test_history.py  test_inner_goals.py  test_instance_desc_lore.py  test_instances.py  test_layer_lore.py  test_link_edit.py  test_look_buckets.py  test_lore_stamp.py  test_manual.py  test_map.py  test_measure.py  test_naming.py  test_presentation.py  test_put_adjacent.py  test_run_portal.py  test_seed_bootstrap.py  test_seed_story.py  test_seed_tavern.py  test_seed_void.py  test_spawn_place.py  test_status.py  test_studio_text.py  test_talk.py  test_text_editor.py  test_timeline.py  test_tree_pack_import.py  test_turn_sep.py  test_undo.py  test_ven_codes.py  (+3 more)
